{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 23,
  "lineage": "f8e61e9d-0916-9f0d-cd10-3ab826b46afb",
  "resources": [
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-network-security-group-test/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "westeurope",
            "name": "nsg",
            "resource_group_name": "dtf-network-security-group-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CreationDateTime": "2023-08-01T14:56:46.3588449Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "test",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-network-security-group-test/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/test",
            "name": "test",
            "network_security_group_name": "nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "dtf-network-security-group-test",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    }
  ]
}